content/v21.1/computed-columns.md
---
title: Use Computed Columns
summary: A computed column exposes data generated by an expression included in the column definition.
toc: true
---

A computed column exposes data generated from other columns by a [scalar expression](scalar-expressions.html) included in the column definition. A stored computed column (set with the `STORED` SQL keyword) is calculated when a row is inserted or updated, and stores the resulting value of the scalar expression in the primary index similar to a regular column. A virtual computed column (set with the `VIRTUAL` SQL keyword) is not stored, and the value of the scalar expression is computed during queries as needed.

## Why use computed columns?

Computed columns are especially useful when used with [`JSONB`](jsonb.html) columns or [secondary indexes](indexes.html).

- **JSONB** columns are used for storing semi-structured `JSONB` data. When the table's primary information is stored in `JSONB`, it's useful to index a particular field of the `JSONB` document. In particular, computed columns allow for the following use case: a two-column table with a `PRIMARY KEY` column and a `payload` column, whose primary key is computed as some field from the `payload` column. This alleviates the need to manually separate your primary keys from your JSON blobs. For more information, see the [`JSONB` example](#create-a-table-with-a-jsonb-column-and-a-stored-computed-column) below.

- **Secondary indexes** can be created on computed columns, which is especially useful when a table is frequently sorted. See the [secondary indexes example](#create-a-table-with-a-secondary-index-on-a-computed-column) below.

## Considerations

Computed columns:

- Cannot be used to generate other computed columns.
- Behave like any other column, with the exception that they cannot be written to directly.
- Are mutually exclusive with [`DEFAULT`](default-value.html).

Virtual computed columns:

- Are not stored in the table's primary index.
- Are recomputed as the column data in the expression changes.
- Cannot be used as part of a primary key, `FAMILY` definition, in `CHECK` constraints, or `FOREIGN KEY` constraints.
- Cannot be a [foreign key](foreign-key.html) reference.
- Cannot be stored in indexes.
- Can be index columns.

## Creation

To define a stored computed column, use the following syntax:

~~~
column_name <type> AS (<expr>) STORED
~~~

<span class="version-tag">New in v21.1:</span> To define a virtual computed column, use the following syntax:

~~~
column_name <type> AS (<expr>) VIRTUAL
~~~

Parameter | Description
----------|------------
`column_name` | The [name/identifier](keywords-and-identifiers.html#identifiers) of the computed column.
`<type>` | The [data type](data-types.html) of the computed column.
`<expr>` | The pure [scalar expression](scalar-expressions.html) used to compute column values. Any functions marked as `impure`, such as `now()` or `nextval()` cannot be used.
`STORED` | _(Required for stored computed columns)_ The computed column is stored alongside other columns.
`VIRTUAL`| _(Required for virtual columns)_ The computed column is virtual, meaning the column data is not stored in the table's primary index.

 For compatibility with PostgresSQL, CockroachDB also supports creating computed columns with the syntax `column_name <type> GENERATED ALWAYS AS (<expr>) STORED`.

## Examples

### Create a table with a stored computed column

{{ partial "{{ page.version.version }}/computed-columns/simple.md" . }}

### Create a table with a `JSONB` column and a stored computed column

{{ partial "{{ page.version.version }}/computed-columns/jsonb.md" . }}

### Create a virtual computed column using `JSONB` data

{{ partial "{{ page.version.version }}/computed-columns/virtual.md" . }}

### Create a table with a secondary index on a computed column

{{ partial "{{ page.version.version }}/computed-columns/secondary-index.md" . }}

### Add a computed column to an existing table

{{ partial "{{ page.version.version }}/computed-columns/add-computed-column.md" . }}

For more information, see [`ADD COLUMN`](add-column.html).

### Convert a computed column into a regular column

{{ partial "{{ page.version.version }}/computed-columns/convert-computed-column.md" . }}

## See also

- [Scalar Expressions](scalar-expressions.html)
- [Information Schema](information-schema.html)
- [`CREATE TABLE`](create-table.html)
- [`JSONB`](jsonb.html)
